--- a/.gitconfig
+++ b/.gitconfig
@@ -4,7 +4,7 @@
 [core]
 	excludesfile = /Users/jan/.gitignore_global
 	autocrlf = input
-	editor = vim
+	editor = /usr/bin/vim
 	compression = -1
 [filter "media"]
 	clean = git-media-clean %f
